-------------------------------
version 3.6
-------------------------------
Bugfixes:
- SQLite3 library improvements
General:
- fixed results header for better navigation and data management

-------------------------------
version 3.5
-------------------------------
Updates:
- support for SQLite3 driver added, so database created with SQLite3 can be managed
	(thanks to J. Gutierrez for providing valuable feedback in this regard)
- added Arabic translation (thanks to Muhannad Ajjan for providing the complete translation)
- filename format can be changed before creating server side backups (to add prefix or additional info to filename)
- Auto pagination now works for all select queries other than table select
- Sorting is now done on the server side instead of client side, also improves integration with pagination
- Removed .htaccess file from root of installation folder, that caused internal server error on many hosts.
	All htaccess settings are now internally managed by MyWebSQL
Bug fixes:
- minor bugs in the sqlite library, causing generation of errors in log
- sql comments were erroneously appended to exported data in html/xhtml format
General:

-------------------------------
version 3.4
-------------------------------
Updates:
- Connection details for custom database servers can be provided on login screen.
	This option is disabled by default. See link below for more details
	http://mywebsql.net/docs/connecting-to-database-servers/user-defined-connections/
- More options in export dialog to fine tune the format of generated SQL script
- Export dialog options are enabled/disabled based on selection of export data for best results
- Database export option now available for PostgreSQL databases also (limited to table data only)
- Secure login is enabled/disable automatically based on PHP configuration
	this fixes the blank screen issue on first run, reported by some users with missing PHP extensions
Bug fixes: